# IDP

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .licenserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_CN.md  README_zh.md  clippy.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml.example
AIGC/: LLaMA.ipynb  (+3 more)
crates/cache_io/: Cargo.toml  readme.md
crates/cache_io/src/: keys.rs  lib.rs
crates/cache_io/src/redis/: cell.rs  conda_env.rs  disk_read_write.rs  distributed_lock.rs  full.rs  hpopt.rs  mod.rs  refresh_disk.rs  snapshot.rs
crates/common/business/: Cargo.toml
crates/common/business/src/: business_term.rs  kubernetes.rs  lib.rs  path_tool.rs  pip_install.rs  region.rs  team_linux_user_id.rs
crates/common/common_tools/: Cargo.toml
crates/common/common_tools/src/: command_tools.rs  cookies_tools.rs  file_tool.rs  io_tool.rs  lib.rs  schedule_tools.rs
crates/common/err/: Cargo.toml
crates/common/err/src/: backtrace_capture.rs  lib.rs
crates/common/kernel_common/: Cargo.toml
crates/common/kernel_common/src/: kubernetes_client.rs  lib.rs  runtime_pod_status.rs  spawn_kernel_process.rs  transport.rs  typedef.rs
crates/common/kernel_common/src/message/: content.rs  header.rs  mod.rs
crates/common/logger/: Cargo.toml
crates/common/logger/src/: lib.rs
crates/common/model/: Cargo.toml
crates/common/model/src/: lib.rs
crates/common/model/src/api_model/: mod.rs
crates/common/model/src/entity/: cell.rs  mod.rs  notebook.rs
crates/common/model/src/enums/: mime.rs  mod.rs
crates/common/model/src/service/: mod.rs  rsp.rs
crates/common/os_utils/: Cargo.toml
crates/common/os_utils/src/: lib.rs  resource_usage.rs
crates/common/os_utils/src/network/: linux_impl.rs  mod.rs  windows_impl.rs
crates/license_generator/: Cargo.toml  README.md
crates/license_generator/src/: lib.rs  main.rs
crates/service/idp/: Cargo.toml  build.rs
crates/service/idp/src/: cli_args.rs  gateway.rs  main.rs  spawn_all_services.rs
crates/service/idp_kernel/: Cargo.toml  baihai_matplotlib_backend.py  kernel_helper.py
crates/service/idp_kernel/src/: arg.rs  lib.rs  main.rs
crates/service/idp_kernel/src/execute_code/: escape_slash_from_frontend.rs  execute_code_context.rs  handle_matplotlib_output.rs  handle_mime_output.rs  handle_output.rs  handle_plotly_output.rs  mod.rs  parse_last_expr.rs  traceback.rs
crates/service/idp_kernel/src/kernel_app/: handle_execute_req_impl.rs  main_loop.rs  mod.rs  output_sender_thread.rs
crates/service/idp_kernel/src/kernel_init/: init_python.rs  init_signal_handler.rs  mod.rs  py_stdin.rs  py_stdout_stderr.rs
crates/service/idp_kernel/src/test_kernel/: mod.rs  nyc_taxi.csv  test_adtk.rs  test_compile_error.rs  test_interrupt.rs  test_lets_plot.rs  test_matplotlib.rs  test_pandas.rs  test_plotly.rs  test_print1_print2.rs  test_runtime_error.rs  test_string_literal.rs  test_try_catch.rs
crates/service/kernel_manage/: Cargo.toml  ws_client.html
crates/service/kernel_manage/kernel_manage.db/: db  snap.00000000000001D4
crates/service/kernel_manage/src/: app_context.rs  dmesg_monitor.rs  error.rs  lib.rs  macros.rs  main.rs  resp.rs  route.rs  route_hyper.rs
crates/service/kernel_manage/src/handler/: cell_state.rs  debug_kernel.rs  execute_record.rs  interrupt.rs  kernel_list.rs  mod.rs  pause.rs  pip_install.rs  resume.rs  shutdown_or_restart.rs  vars.rs
crates/service/kernel_manage/src/handler/execute_code/: add_req_to_pending.rs  browser_ws_handler.rs  execute_req_model.rs  kernel_ws_handler.rs  mod.rs  sql_cell_wrapper.rs  visual_cell_wrapper.rs  websocket_transport.rs  websocket_transport_hyper.rs
crates/service/kernel_manage/src/handler/prelude/: cookie_team_id.rs  ipynb_path.rs  mod.rs
crates/service/kernel_manage/src/kernel_entry/: handle_kernel_execute_resp.rs  kernel_main_loop.rs  kernel_operate.rs  kernel_state.rs  mod.rs
crates/service/kernel_manage/src/kernel_websocket_integration_tests/: black_box_test.rs  kernel_execute_health_check.rs  mod.rs  test_kernel_operate.rs  white_box_test.rs
crates/service/kernel_manage/src/ws_integration_tests/: mod.rs
crates/service/lsp/: Cargo.toml  build.rs
crates/service/lsp/src/: helper.rs  lib.rs  main.rs  test.rs
crates/service/note_storage/: Cargo.toml  build.rs  sqlx-data.json
crates/service/note_storage/extension_config/: config.json
crates/service/note_storage/src/: app_context.rs  dataobj.rs  lib.rs  route.rs  status_code.rs
crates/service/note_storage/src/api/: mod.rs
crates/service/note_storage/src/api/http/: mod.rs
crates/service/note_storage/src/api_model/: content.rs  environment.rs  hpopt.rs  mod.rs  pipeline.rs  project.rs  service_log.rs  workspace.rs
crates/service/note_storage/src/api_model/deploy_service/: idp_k8s.rs  mod.rs  service_status.rs
crates/service/note_storage/src/business_/: mod.rs  path_tool.rs
crates/service/note_storage/src/common/: error.rs  mod.rs
crates/service/note_storage/src/handler/: environment.rs  git_service.rs  inner.rs  kernel.rs  mod.rs  note.rs  note_handler.rs  package.rs  pipeline_handler.rs  project_handler.rs  publish_third_party_model_platform.rs  runtime_pod.rs  state.rs  team_handler.rs
crates/service/note_storage/src/handler/content/: content_entrance.rs  mod.rs  partial_update_cell.rs  save_cell.rs  share_cell.rs
crates/service/note_storage/src/handler/deploy/: equipment.rs  mod.rs
crates/service/note_storage/src/pojo/: equipment.rs  mod.rs  time_tool.rs
crates/service/note_storage/src/service/: mod.rs
crates/service/note_storage/src/utils/: db_config.rs  db_utils.rs  mod.rs
crates/service/note_storage/test_cases/: 1.ipynb  bash.sh  bounding-box-20211122170445.ipynb  bounding-box.idpnb  image-augmentation.idpnb  image-augmentation.json  two_files_and_a_dir.tgz
crates/service/spawner/: Cargo.toml
crates/service/spawner/src/: check_pod_idle.rs  lib.rs  main.rs  route.rs
crates/service/spawner/src/handler/: mod.rs  start_kernel.rs
crates/service/submitter/: Cargo.toml
crates/service/submitter/src/: lib.rs
(+760 files in other folders)
