[package]
license = "Apache-2.0"
name = "cache_io"
version = "0.1.0"
edition = "2021"

[features]
default = ["redis"]
redis = ["dep:redis", "dep:bb8-redis"]

[dependencies]
bb8-redis = { version = "0.11", optional = true }
business = { path = "../common/business" }
chrono = { version = "0.4", features = ["serde"] }
common_model = { path = "../common/model" }
common_tools = { path = "../common/common_tools", default-features = false }
err = { path = "../common/err" }
redis = { version = "0.21.5", features = ["tokio-comp"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.17.0", features = ["fs", "sync", "macros"] }
tracing = "0.1.29"

[dev-dependencies]
#logger = { path = "../common/logger" }
tokio = { version = "1.17.0", features = ["rt", "fs", "sync", "macros"] }
