[package]
edition = "2021"
license = "Apache-2.0"
name = "cache_io"
version = "0.1.0"

[dependencies]
business = { path = "../common/business" }
common_model = { path = "../common/model" }
common_tools = { path = "../common/common_tools", default-features = false }
err = { path = "../common/err" }

# bb8-redis = { version = "0.12" }
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.17.0", features = ["fs", "sync", "macros"] }
tracing = "0.1.29"

[dev-dependencies]
#logger = { path = "../common/logger" }
tokio = { version = "1.17.0", features = ["rt", "fs", "sync", "macros"] }
