[package]
edition.workspace = true
license.workspace = true
name = "license_generator"
version.workspace = true

[dependencies]
bincode = "1.3.3"
hex = "0.4"
rand = "0.8"
rsa = { version = "0.7", default-features = false, features = ["pem"] }
serde = { version = "1.0.145", features = ["derive"] }
sha2 = "0.10.6"
signature = "1.6.4"
