[package]
edition.workspace = true
license.workspace = true
name = "license_generator"
version.workspace = true

[dependencies]
base64.workspace = true
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rsa = { version = "0.7", default-features = false, features = ["pem"] }
serde = { version = "1.0.145", features = ["derive"] }
sha2 = "0.10.6"
ureq = { version = "2.0", features = ["json"] }
