[package]
edition.workspace = true
license.workspace = true
name = "common_tools"
version.workspace = true

[features]
cookie = ["tower-cookies"]
default = ["io", "cookie"]
io = ["chrono"]
no_axum = []

[dependencies]
common_model = { path = "../model" }

base64 = { version = "0.13.0" }
business = { path = "../business" }
chrono = { version = "0.4.19", optional = true }
encoding_rs = "0.8"
err = { path = "../err" }
serde_json = "1.0.68"
tokio = { version = "1.17.0", features = [
    "fs",
    "io-util",
    "rt",
    "process",
    "sync",
] }
tower-cookies = { version = "0.7", optional = true }
tracing = "0.1.29"

[target.'cfg(windows)'.dependencies]
fs_extra = "1.2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
