[package]
edition.workspace = true
license.workspace = true
name = "common_tools"
version.workspace = true

[features]
default = ["io", "cookie"]

cookie = ["dep:axum"]
io = ["dep:chrono"]

[dependencies]
business = { path = "../business" }
common_model = { path = "../model" }

axum = { version = "0.6", features = ["headers"], optional = true }
base64 = { version = "0.13.0" }
chrono = { version = "0.4.23", optional = true }
encoding_rs = "0.8"
err = { path = "../err" }
serde_json = "1.0.68"
tokio = { version = "1.17.0", features = [
    "fs",
    "io-util",
    "rt",
    "process",
    "sync",
] }
tracing = "0.1.29"

[target.'cfg(windows)'.dependencies]
fs_extra = "1.2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
