[package]
edition = "2021"
license = "Apache-2.0"
name = "err"
version = "0.1.0"

[features]
axum = ["dep:axum", "dep:serde_json", "dep:tracing"]
default = []

[dependencies]
axum = { version = "0.5", default-features = false, features = [
    "json",
], optional = true }
backtrace = "0.3"
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
