[package]
edition.workspace = true
license.workspace = true
name = "err"
version.workspace = true

[features]
default = ["axum"]

axum = ["dep:axum", "dep:serde_json", "dep:tracing"]

[dependencies]
axum = { version = "0.6", default-features = false, features = [
    "json",
], optional = true }
backtrace = "0.3"
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
