[package]
edition = "2021"
license = "Apache-2.0"
name = "common_model"
publish = false
version = "0.1.0"

[features]
axum = ["dep:axum"]
default = []

[dependencies]
#serde_helper = { path = "../serde_helper" }
axum = { version = "0.5", default-features = false, features = [
    "json",
], optional = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "1.1", features = ["serde", "v4"] }
