[package]
edition.workspace = true
license.workspace = true
name = "common_model"
version.workspace = true

[features]
default = ["axum"]

axum = ["dep:axum"]

[dependencies]
#serde_helper = { path = "../serde_helper" }
axum = { version = "0.6", default-features = false, features = [
    "json",
], optional = true }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "1.1", features = ["serde", "v4"] }
