[package]
name = "kernel_manage"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["tcp"]
#fifo = ["kernel_common/fifo", "kernel_common/spawn"]
tcp = ["dep:reqwest", "kernel_common/tcp", "kernel_common/spawn"]

[dependencies]
business = { path = "../../common/business" }
common_model = { path = "../../common/model" }
err = { path = "../../common/err" }
kernel_common = { path = "../../common/kernel_common", default-features = false }
logger = { path = "../../common/logger" }
serde_helper = { path = "../../common/serde_helper" }


chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
hyper-tungstenite = "0.8"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sled = "0.34"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
    "rt",
] }
tracing = "0.1"
urlencoding = "2.1"

[build-dependencies]
git_version = { path = "../../common/git_version" }
