[package]
edition.workspace = true
license.workspace = true
name = "kernel_manage"
version.workspace = true

[features]
default = ["tcp"]
#fifo = ["kernel_common/fifo", "kernel_common/spawn"]
tcp = []

[dependencies]
business = { path = "../../common/business" }
common_model = { path = "../../common/model", default-features = false }
err = { path = "../../common/err", default-features = false }
kernel_common = { path = "../../common/kernel_common" }
logger = { path = "../../common/logger" }
serde_helper = { path = "../../common/serde_helper" }

# hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
# hyper-tungstenite = "0.9"
axum = { version = "0.6", features = ["ws", "headers"] }
# axum-macros = "0.3"
futures-util = "0.3"
lru = "0.9"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
tracing = "0.1"
urlencoding = "2.1"

# [dev-dependencies]
# toml.workspace = true
# idp_kernel = { path = "../idp_kernel" }

[build-dependencies]
git_version = { path = "../../common/git_version" }
