[package]
edition.workspace = true
license.workspace = true
name = "lsp"
version.workspace = true

[dependencies]
business = { path = "../../common/business" }
err = { path = "../../common/err" }
logger = { path = "../../common/logger" }

chrono = "0.4.23"
futures-util = "0.3.19"
lsp-types = "0.93.0"
regex = "1.5.4"
serde = "1.0.133"
serde_json = "1.0.75"
tokio = { version = "1.15.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "process",
] }
tokio-tungstenite = "0.18"
tracing = "0.1"
url = "2.2.2"
#notify = "5.0.0-pre.14"

[build-dependencies]
git_version = { path = "../../common/git_version" }
