[package]
edition.workspace = true
license.workspace = true
name = "note_storage"
version.workspace = true

[features]
default = ["redis"]
redis = []

[dependencies]
business = { path = "../../common/business" }
cache_io = { path = "../../cache_io" }
common_model = { path = "../../common/model" }
common_tools = { path = "../../common/common_tools" }
err = { path = "../../common/err" }
kernel_common = { path = "../../common/kernel_common" }
license_generator = { path = "../../license_generator" }
logger = { path = "../../common/logger" }
os_utils = { path = "../../common/os_utils" }
serde_helper = { path = "../../common/serde_helper" }
test_runner = { path = "../../test_runner" }

axum = { version = "0.6", features = ["multipart", "headers"] }
axum-macros = "0.3"
base64 = { version = "0.20" }
chrono = "0.4.23"
encoding_rs = "0.8"
flate2 = "1.0"
futures = "0.3"
json-structural-diff = { version = "0.1.0", features = ["colorize"] }
lazy_static = "1.4.0"
mime_guess = "2.0.4"
regex = "1.6"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "stream",
    "json",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.68"
sqlx = { version = "0.6.0", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
] }
ssh2 = "0.9.3" # vendored-openssl
str-utils = "0.1.5"
suppaftp = "4.2.0"
tar = { version = "0.4", default-features = false }
tokio = { version = "1.0.1", features = [
    "fs",
    "sync",
    "rt-multi-thread",
    "macros",
] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
toml = "0.5.8"
tower-http = { version = "0.3", default-features = false, features = [
    "compression-gzip",
] }
tracing = "0.1.29"
tree_magic = "0.2.3"
urlencoding = "2.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
#fs_extra = "0.2"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "stream",
    "json",
    "blocking",
] }
tokio = { version = "1.0.1", features = [
    "fs",
    "sync",
    "rt-multi-thread",
    "macros",
    "process",
] }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
git_version = { path = "../../common/git_version" }
