[package]
edition.workspace = true
license.workspace = true
name = "spawner"
version.workspace = true

[dependencies]
business = { path = "../../common/business" }
common_model = { path = "../../common/model" }
kernel_common = { path = "../../common/kernel_common" }
err = { path = "../../common/err" }

axum = { version = "0.6" }
tracing = "0.1"
