[package]
edition.workspace = true
license.workspace = true
name = "spawner"
version.workspace = true

[dependencies]
business = { path = "../../common/business" }
common_model = { path = "../../common/model" }
err = { path = "../../common/err" }
kernel_common = { path = "../../common/kernel_common" }
logger = { path = "../../common/logger" }

axum = { version = "0.6" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
